--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="public/styles.css" />
-    <script src="public/js/HomeUtility.js"></script>
+    <script src="public/js/HomeUtility.js" type="module"></script>
+    <script src="./public/js/globaldb.js" type="module"></script>
     <title>Document</title>
   </head>
   <body>
@@ -15,7 +16,7 @@
       </div>
 
       <div>
-        <button class="search-button sofia" onclick="gotoSearch()">Search</button>
+        <button class="search-button sofia" onclick="window.location.href = './urls/search'">Search</button>
       </div>
     </header>
 
@@ -45,39 +46,7 @@
     </nav>
 
     <main>
-      <section class="shoes-section">
-        <div class="shoes-item">
-          <img src="public/images/SN1.jpg" onclick="seeDetail()" />
-          <div class="shoe-item-desc sofia">
-            <div>Nice title for shoe</div>
-            <div>Price Here IDR</div>
-          </div>
-        </div>
-
-        <div class="shoes-item">
-          <img src="public/images/SN2.jpg" />
-          <div class="shoe-item-desc sofia">
-            <div>Nice title for shoe</div>
-            <div>Price Here IDR</div>
-          </div>
-        </div>
-
-        <div class="shoes-item">
-          <img src="public/images/SN3.jpg" />
-          <div class="shoe-item-desc sofia">
-            <div>Nice title for shoe</div>
-            <div>Price Here IDR</div>
-          </div>
-        </div>
-
-        <div class="shoes-item">
-          <img src="public/images/SN4.jpg" />
-          <div class="shoe-item-desc sofia">
-            <div>Nice title for shoe</div>
-            <div>Price Here IDR</div>
-          </div>
-        </div>
-      </section>
+      <section class="shoes-section" id="sneaker-container"></section>
 
       <div class="big-title sofia">Sport Shoes</div>
 
