--- a/urls/search/index.html
+++ b/urls/search/index.html
@@ -10,26 +10,16 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <div>
-        <h1 class="sofia text-primary">Andika</h1>
-      </div>
-
-      <div>
-        <button class="home-button sofia" onclick="window.location.href = '/'">
-          <svg style="width: 24px; height: 24px" viewBox="0 0 24 24">
-            <path fill="currentColor" d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" />
-          </svg>
-        </button>
-      </div>
-    </header>
+    <header></header>
 
     <main>
       <div class="search-container">
         <input type="text" id="input-text" placeholder="Search for something" class="input-text sofia" />
       </div>
-      <p class="sofia res-text" id="res-text">Result(s) of anjai mabar</p>
+      <p class="sofia res-text" id="res-text"></p>
       <section class="result-section" id="result-container"></section>
     </main>
+
+    <footer></footer>
   </body>
 </html>
