--- a/urls/shoe/index.html
+++ b/urls/shoe/index.html
@@ -10,15 +10,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <div>
-        <h1 class="sofia text-primary">Andika</h1>
-      </div>
-
-      <div>
-        <button class="back-button sofia" onclick="window.history.back()">Back</button>
-      </div>
-    </header>
+    <header></header>
 
     <main>
       <div class="container">
@@ -101,5 +93,7 @@
         </div>
       </div>
     </main>
+
+    <footer></footer>
   </body>
 </html>
