add proper shoe title for high heels

--- a/urls/shoe/index.html
+++ b/urls/shoe/index.html
@@ -81,11 +81,7 @@
         </div>
         <div class="product-detail">
           <p class="product-title sofia" id="product-title">Title Here, might be longer</p>
-          <p class="product-description sofia">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae ipsam temporibus vitae nihil quas aliquid
-            voluptate ea amet dolorem architecto eius quibusdam corporis, laboriosam ex veniam? Dolore reiciendis sunt
-            animi?
-          </p>
+          <p class="product-description sofia" id="product-description"></p>
           <p class="product-price sofia" id="product-price">RP 100000 IDR</p>
           <br />
           <br />
