--- a/index.html
+++ b/index.html
@@ -9,20 +9,11 @@
     <script src="public/bootstrap/js/bootstrap.js"></script>
     <script src="public/js/HomeUtility.js" type="module"></script>
     <script src="./public/js/globaldb.js" type="module"></script>
+    <script src="./public/js/globalfunc.js" type="module"></script>
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <div>
-        <img src="./public/images/zara.png" alt="" width="200" style="margin-block: 1em" />
-      </div>
-
-      <div>
-        <button class="search-button sofia" onclick="window.location.href = './urls/search'">Search</button>
-        <button class="header-button sofia" onclick="window.location.href = '/'">Home</button>
-        <button class="header-button sofia" onclick="window.location.href = '/'">Login</button>
-      </div>
-    </header>
+    <header></header>
 
     <div id="banner-carousel" class="carousel slide">
       <div class="carousel-inner">
