change gallery title

--- a/urls/gallery/index.html
+++ b/urls/gallery/index.html
@@ -14,7 +14,7 @@
 
     <main>
       <center>
-        <h1 class="sofia"><u>Our Gallery</u></h1>
+        <h1 class="sofia"><u>Galleri, informasi Barang dan Harga</u></h1>
       </center>
       <section class="result-section" id="result-container"></section>
     </main>
